# src/domain/enums/request_type.py
@@ -2,12 +2,6 @@ from enum import Enum
 
 
 class RequestType(str, Enum):
-    FLOOD = "FLOOD"
-    FIRE = "FIRE"
-    EARTHQUAKE = "EARTHQUAKE"
-    LANDSLIDE = "LANDSLIDE"
-    STORM = "STORM"
     MEDICAL = "MEDICAL"
     EVACUATION = "EVACUATION"
     SUPPLY = "SUPPLY"
-    OTHER = "OTHER"
